--- a/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Header/_AdminHeader.cshtml
+++ b/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Header/_AdminHeader.cshtml
@@ -21,6 +21,7 @@
 {
     Chapter = Model.Chapter,
     Breakpoint = "sm",
+    Id = "navbar-admin-main",
     Member = Model.CurrentMember,
     MenuItems = new []
     {
