--- a/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Header/_AccountMenu.cshtml
+++ b/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Header/_AccountMenu.cshtml
@@ -1,47 +1,41 @@
-﻿@using ODK.Core.Chapters
-@using ODK.Services.Authentication
-@using ODK.Services.Caching
+﻿@using ODK.Services.Authentication
 @model ODK.Web.Razor.Models.Header.AccountMenuViewModel
-@inject IRequestCache RequestCache
-@{
-    Chapter? memberChapter = Model.Member != null 
-        ? Model.Chapter?.Id == Model.Member.ChapterId ? Model.Chapter : await RequestCache.GetChapter(Model.Member.ChapterId) 
-        : null;
-}
 
-@if (memberChapter != null)
+@if (Model.MemberChapter != null)
 {
-    <div class="dropdown account-links">
-        <div class="text-light account-links__user dropdown-toggle" data-bs-toggle="dropdown">
-            <i class="fas fa-user"></i>
-        </div>
-        <div class="dropdown-menu dropdown-menu-end">
-            <a class="dropdown-item" href="/@memberChapter.Name/Account">My profile</a>
-            <a class="dropdown-item" href="/@memberChapter.Name">@memberChapter.Name</a>
-            <a class="dropdown-item" href="/@memberChapter.Name/Account/Logout">Sign Out</a>
+    <div class="account-links">
+        <div class="dropdown">
+            <div class="text-light account-links__user dropdown-toggle" data-bs-toggle="dropdown">
+                <i class="fas fa-user"></i>
+            </div>
+            <div class="dropdown-menu dropdown-menu-end">
+                <a class="dropdown-item" href="/@Model.MemberChapter.Name/Account">My profile</a>
+                <a class="dropdown-item" href="/@Model.MemberChapter.Name">@Model.MemberChapter.Name</a>
+                <a class="dropdown-item" href="/@Model.MemberChapter.Name/Account/Logout">Sign Out</a>
             
-            @if (User.IsInRole(OdkRoles.Admin))
-            {
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/@memberChapter.Name/Admin/Chapter/Text">@memberChapter.Name admin</a>
-                <a class="dropdown-item" href="/@memberChapter.Name/Admin/Events/Create">Create event</a>
-            }
+                @if (User.IsInRole(OdkRoles.Admin))
+                {
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/@Model.MemberChapter.Name/Admin/Chapter/Text">@Model.MemberChapter.Name admin</a>
+                    <a class="dropdown-item" href="/@Model.MemberChapter.Name/Admin/Events/Create">Create event</a>
+                }
             
-            @if (User.IsInRole(OdkRoles.SuperAdmin))
-            {
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/@memberChapter.Name/Admin/SuperAdmin/PaymentSettings">Super admin</a>
-            }
+                @if (User.IsInRole(OdkRoles.SuperAdmin))
+                {
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/@Model.MemberChapter.Name/Admin/SuperAdmin/PaymentSettings">Super admin</a>
+                }
+            </div>
         </div>
     </div>
 }
 else
 {
     <div class="anonymous-links">
-        <a class="btn btn-primary anonymous-link" href="@(Model.Chapter != null ? $"/{Model.Chapter.Name}/Account/Login" : "/Account/Login")">Sign in</a>
-        @if (Model.Chapter != null)
+        <a class="btn btn-primary anonymous-link" href="@(Model.CurrentChapter != null ? $"/{Model.CurrentChapter.Name}/Account/Login" : "/Account/Login")">Sign in</a>
+        @if (Model.CurrentChapter != null)
         {
-            <a class="btn btn-success anonymous-link" href="/@Model.Chapter.Name/Account/Join">Join</a>
+            <a class="btn btn-success anonymous-link" href="/@Model.CurrentChapter.Name/Account/Join">Join</a>
         }
     </div>
 }
