--- a/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Header/_AdminSubMenu.cshtml
+++ b/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Header/_AdminSubMenu.cshtml
@@ -14,6 +14,7 @@
     Compact = true,
     Fluid = true,
     HideAccountMenu = true,
+    Id = "navbar-admin-sub",
     MenuItems = new []
     {
         Model.ToArray()
