--- a/ODK.Web.Razor/Views/Shared/Contact/_ContactForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Contact/_ContactForm.cshtml
@@ -1,5 +1,7 @@
 ﻿@model ODK.Web.Razor.Models.Contact.ContactFormViewModel
 
+@Html.HiddenFor(x => x.Recaptcha, new { data_recaptcha_token = "" })
+
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.EmailAddress, new { @class = "form-label" })
     @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control" })
