--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorContent.cshtml
@@ -7,6 +7,8 @@
     Guid? memberId = User.MemberId();
     IReadOnlyCollection<LogMessage> similar = await LoggingService.GetSimilarErrorMessages(memberId!.Value, 
         Model.Error);
+
+    IDictionary<string, string> properties = Model.Error.GetProperties();
 }
 
 <div class="mb-3">
@@ -22,6 +24,16 @@
         @Model.Error.Message
     </div>
 </div>
+
+@foreach (string key in properties.Keys)
+{
+    <div class="mb-3">
+        <label class="form-label">@key</label>
+        <div class="form-control-plaintext">
+            @properties[key]
+        </div>
+    </div>
+}
 
 @if (similar.Count > 0)
 {
