--- a/ODK.Web.Razor/Views/Shared/Members/_MemberList.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_MemberList.cshtml
@@ -8,6 +8,7 @@
 }
 
 <div class="row g-0 
+            @(Model.Cols == 6 ? "row-cols-6" : null)
             @(Model.Cols == 4 ? "row-cols-md-3 row-cols-4" : null)
             @(Model.Cols == 3 ? "row-cols-md-6 row-cols-3" : null)
             @(Model.Cols == 2 ? "row-cols-lg-4 row-cols-2" : null)">
@@ -18,7 +19,7 @@
             {
                 ImageHeight = Model.ImageHeight,
                 MaxWidth = Model.MaxWidth,
-                Size = Model.Size
+                Size = Model.Size                
             })
         </div>
     }
