--- a/ODK.Web.Razor/wwwroot/css/_themes.scss
+++ b/ODK.Web.Razor/wwwroot/css/_themes.scss
@@ -3,3 +3,10 @@
     background-color: #e03034;
   }
 }
+
+.chapter-theme--manchester {
+    .section--header {
+        background-color: #F3D402;
+        color: #212529;
+    }
+}
