--- a/ODK.Web.Razor/Views/Shared/Header/_AccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_AccountMenu.cshtml
@@ -28,7 +28,12 @@
                     }
 
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/@Model.MemberChapter.Name/Admin/SuperAdmin/PaymentSettings">Super admin</a>
+                    <a class="dropdown-item" href="/@Model.MemberChapter.Name/Admin/SuperAdmin/PaymentSettings">@Model.MemberChapter.Name Super admin</a>
+
+                    if (Model.CurrentChapter != null && Model.CurrentChapter.Id != Model.MemberChapter.Id)
+                    {
+                        <a class="dropdown-item" href="/@Model.CurrentChapter.Name/Admin/SuperAdmin/PaymentSettings">@Model.CurrentChapter.Name Super admin</a>
+                    }
                 }
             </div>
         </div>
