--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MembersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MembersContent.cshtml
@@ -56,6 +56,7 @@
         <th data-sortable-sort>Type</th>
         <th data-sortable-sort>Expires</th>
         <th>Emails</th>
+        <th></th>
     </tr>
     </thead>
     <tbody>
@@ -85,6 +86,17 @@
                 else
                 {
                     <i class="fas fa-times-circle text-danger"></i>
+                }
+            </td>
+            <td>
+                @if (!member.Activated)
+                {
+                    <form method="post" action="/@Model.Name/Admin/Members/@member.Id/ResendActivationEmail">
+                        <button data-bs-toggle="tooltip" data-bs-title="Re-send activation email"
+                                class="btn-icon text-primary">
+                            <i class="fas fa-envelope-square"></i>
+                        </button>
+                    </form>
                 }
             </td>
         </tr>
