(payments admin): create/update provider

--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SendMemberBulkEmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SendMemberBulkEmailContent.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ODK.Core.Members
 @using ODK.Web.Razor.Models.Admin.Members
 
+<h2>Bulk email</h2>
 <form method="post" action="/@Model.Chapter.Name/Admin/Members/SendEmail">
     @Html.AntiForgeryToken()
 
