Update font awesome

--- a/ODK.Web.Razor/Views/Shared/Footer/_Footer.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Footer/_Footer.cshtml
@@ -38,8 +38,8 @@
                     @if (!string.IsNullOrEmpty(links?.TwitterName))
                     {
                         <div>
-                            <i class="fab fa-twitter mr-1"></i>
-                            <a href="https://www.twitter.com/@links.TwitterName" target="_blank">@links.TwitterName</a>
+                            <i class="fab fa-x-twitter mr-1"></i>
+                            <a href="https://www.x.com/@links.TwitterName" target="_blank">@links.TwitterName</a>
                         </div>
                     }
                 </div>
